# text-parsing

./: Cargo.toml  README.md
src/: lib.rs  locality.rs  parser.rs  source.rs  state.rs
src/entities/: entities.rs  parser.rs  state.rs
src/paragraph/: parser.rs  state.rs
src/tagger/: parser.rs  state.rs  tags.rs
