[package]
name = "text-parsing"
version = "0.4.0"
edition = "2021"
authors = ["merl <merl.001.mia@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "Hierarchical text processing preserving char position info"

repository = "https://github.com/merl-twin/text-parsing"
homepage = "https://github.com/merl-twin/text-parsing"

include = [
    "**/*.rs",
    "Cargo.toml",
]


[dependencies]
opt_struct = "0.1"
unicode-properties = "0.1"
